--- a/shourya.html
+++ b/shourya.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello from shourya on net</h1>
+    <h1>hello from shourya</h1>
+    <h1>web designer</h1>
 </body>
 </html>
