--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Session</title>
+    <title>Document</title>
 </head>
 <body>
-    <p>Commit</p>
-    <p>Staged</p>
-    <p>Working</p>
-    <p>Google</p>
-    <p>Parle</p>
+    
 </body>
 </html>
